--- a/doctype.html
+++ b/doctype.html
@@ -8,7 +8,7 @@
 
 <body>
     <table>
-        <th><img src="images/Makarony.jpg" width="250" height="170" alt="makaroni with tephtelia"></tH>
+        <th><img src="Makarony.jpg" width="250" height="170" alt="makaroni with tephtelia"></tH>
         <th>
             <h1>Volodia Mat</h1>
             <p><em>я люблю<strong> <U> МНОГО ЕСТЬ </U></strong></em></p>
