--- a/hobbies.html
+++ b/hobbies.html
@@ -1,2 +1,7 @@
+<head>
+    <meta charset="utf-8">
+    <title>Volodia Personal Stile</title>
+    <link rel="stylesheet" href="/css/style.css">
+</head>
 <h2>программирование</h2>
 <p>что-то мб еще</p>
