--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Volodia Personal Stile</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -26,6 +27,7 @@
         <li>Много денег</li>
         <li>Много машин</li>
     </ul>
+    <hr>
     <h3>Work Experience</h3>
     <table>
         <tbody>
