--- a/myinfo.html
+++ b/myinfo.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8">
-    <title>myinfo</title>
+    <title>My info</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
