--- a/myinfo.html
+++ b/myinfo.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <title>My info</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/cv/css/style.css">
 </head>
 
 <body>
